añadir responsive design a la página

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pagina",
   "version": "0.1.0",
+  "homepage": "https://www.ceb64.com/",
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
